--- a/hvigor/hvigor-config.json5
+++ b/hvigor/hvigor-config.json5
@@ -1,18 +1,22 @@
 {
-  "hvigorVersion": "3.0.2",
+  "hvigorVersion": "file:F:\\soft\\harmonyos\\503Config\\DevEco Studio\\tools\\hvigor\\dependencies\\hvigor-4.2.0.tgz",
   "dependencies": {
-    "@ohos/hvigor-ohos-plugin": "3.0.2"
+    "@ohos/hvigor-ohos-plugin": "file:F:\\soft\\harmonyos\\503Config\\DevEco Studio\\tools\\hvigor\\dependencies\\hvigor-ohos-plugin-4.2.0.tgz"
   },
   "execution": {
-    // "daemon": true,                          /* Enable daemon compilation. Default: true */
-    // "incremental": true,                     /* Enable incremental compilation. Default: true */
-    // "parallel": true,                        /* Enable parallel compilation. Default: true */
-    // "typeCheck": false,                      /* Enable typeCheck. Default: false */
+    // "analyze": "default",                    /* Define the build analyze mode. Value: [ "default" | "verbose" | false ]. Default: "default" */
+    // "daemon": true,                          /* Enable daemon compilation. Value: [ true | false ]. Default: true */
+    // "incremental": true,                     /* Enable incremental compilation. Value: [ true | false ]. Default: true */
+    // "parallel": true,                        /* Enable parallel compilation. Value: [ true | false ]. Default: true */
+    // "typeCheck": false,                      /* Enable typeCheck. Value: [ true | false ]. Default: false */
   },
   "logging": {
     // "level": "info"                          /* Define the log level. Value: [ "debug" | "info" | "warn" | "error" ]. Default: "info" */
   },
   "debugging": {
-    // "stacktrace": false                      /* Disable stacktrace compilation. Default: false */
+    // "stacktrace": false                      /* Disable stacktrace compilation. Value: [ true | false ]. Default: false */
+  },
+  "nodeOptions": {
+    // "maxOldSpaceSize": 4096                  /* Enable nodeOptions maxOldSpaceSize compilation. Unit M. Used for the daemon process */
   }
 }
