--- a/oh-package.json5
+++ b/oh-package.json5
@@ -1,13 +1,13 @@
 {
+  "license": "",
+  "devDependencies": {
+    "@ohos/hypium": "1.0.15",
+    "@ohos/hamock": "1.0.0-rc"
+  },
+  "author": "",
   "name": "harmonyosrefresh",
-  "version": "1.0.0",
   "description": "Please describe the basic information.",
   "main": "",
-  "author": "",
-  "license": "",
-  "dependencies": {
-  },
-  "devDependencies": {
-    "@ohos/hypium": "1.0.6"
-  }
+  "version": "1.0.0",
+  "dependencies": {}
 }
