--- a/example/oh-package.json5
+++ b/example/oh-package.json5
@@ -7,7 +7,7 @@
   "main": "",
   "version": "1.0.0",
   "dependencies": {
-    "@abner/refresh": "file:libs/refresh-1.1.1.har",
-    "@abner/tab": "^1.0.0"
+    "@abner/refresh": "file:libs/refresh-1.1.6.har",
+    "@abner/tab": "file:libs/tab.har"
   }
 }
