--- a/oh-package.json5
+++ b/oh-package.json5
@@ -1,13 +1,10 @@
 {
-  "license": "",
-  "devDependencies": {
-    "@ohos/hypium": "1.0.15",
-    "@ohos/hamock": "1.0.0-rc"
-  },
-  "author": "",
-  "name": "harmonyosrefresh",
+  "modelVersion": "5.0.0",
   "description": "Please describe the basic information.",
-  "main": "",
-  "version": "1.0.0",
-  "dependencies": {}
+  "dependencies": {
+  },
+  "devDependencies": {
+    "@ohos/hypium": "1.0.18",
+    "@ohos/hamock": "1.0.0"
+  }
 }
