--- a/example/oh-package.json5
+++ b/example/oh-package.json5
@@ -7,7 +7,7 @@
   "main": "",
   "version": "1.0.0",
   "dependencies": {
-    "@abner/refresh": "file:./libs/refresh-1.3.3.har",
+    "@abner/refresh": "file:../refresh",
     "@abner/tab": "file:libs/tab.har"
   }
 }
