--- a/build-profile.json5
+++ b/build-profile.json5
@@ -1,7 +1,7 @@
 {
   "app": {
     "signingConfigs": [
-      
+
     ],
     "products": [
       {
@@ -32,6 +32,10 @@
           ]
         }
       ]
+    },
+    {
+      "name": "refresh",
+      "srcPath": "./refresh",
     }
   ]
 }
