--- a/example/src/main/module.json5
+++ b/example/src/main/module.json5
@@ -11,6 +11,12 @@
     "deliveryWithInstall": true,
     "installationFree": false,
     "pages": "$profile:main_pages",
+    "requestPermissions": [
+      {
+        "name": "ohos.permission.INTERNET",
+        "reason": "$string:reason",
+      }
+    ],
     "abilities": [
       {
         "name": "ExampleAbility",
